--- a/Network.asmdef
+++ b/Network.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "WrappedNetwork",
-    "rootNamespace": "WrappedNetwork",
+    "name": "Network",
+    "rootNamespace": "UnityEngine.Networking",
     "references": [
         "GUID:30817c1a0e6d646d99c048fc403f5979"
     ],
